<resources>
    <string name="app_name">AppHourPlay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_test">App name test</string>
    <string name="hour_minutes">00:00</string>
    <string name="hora_de_deberes">Hora de Deberes</string>
    <string name="reglas">Reglas</string>
    <string name="shared">Hola !</string>
    <string name="user_name">User NAME</string>
    <string name="calcule">calcule</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="duolingo">Duolingo</string>
    <string name="continue_text">Continue</string>
    <string name="andrew">Andrew</string>
    <string name="matthew">Matthew</string>
</resources>