<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_test"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app1">

            <TextView
                android:id="@+id/name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"/>

            <TextView
                android:id="@+id/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_minutes" />

            <TextView
                android:id="@+id/time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_minutes" />

            <TextView
                android:id="@+id/text_test1"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="Sorteo Fragment"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_calcule_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcule" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>