<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DuolingoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_user1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher_background"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/cardview_image"
                app:layout_constraintTop_toTopOf="@id/cardview_image"
                app:layout_constraintBottom_toBottomOf="@id/cardview_image"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/name_user"
                app:layout_constraintTop_toTopOf="@id/cardview_image"
                app:layout_constraintBottom_toBottomOf="@id/cardview_image"
                android:text="@string/hour_minutes" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout_text_times"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/cardview_image"
                app:layout_constraintTop_toBottomOf="@id/cardview_image">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_on_pause"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_minutes" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Stop hour" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_start"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_minutes" />
                    <TextView
                        android:id="@+id/time_new_start"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_minutes" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Start hour" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <View
                    android:id="@+id/divider1"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_end"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_minutes" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="End hour" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_text_times"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_bar">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_stop"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_calcule_time"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/start" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_continue"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_text" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@id/cardview_user1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_image1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_user1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher_background"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name_user1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/cardview_image1"
                app:layout_constraintTop_toTopOf="@id/cardview_image1"
                app:layout_constraintBottom_toBottomOf="@id/cardview_image1"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/name_user1"
                app:layout_constraintTop_toTopOf="@id/cardview_image1"
                app:layout_constraintBottom_toBottomOf="@id/cardview_image1"
                android:text="@string/hour_minutes" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout_text_times1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/cardview_image1"
                app:layout_constraintTop_toBottomOf="@id/cardview_image1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_on_pause1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_minutes" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Stop hour" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <View
                    android:id="@+id/divider2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_start1"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_minutes" />
                    <TextView
                        android:id="@+id/time_new_start1"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_minutes" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Start hour" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <View
                    android:id="@+id/divider3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/time_end1"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour_minutes" />
                    <TextView
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="End hour" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_bar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_text_times1"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_bar1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_stop1"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_calcule_time1"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/start" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_continue1"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_text" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>